--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -92,7 +92,7 @@
                     <h3>
                         <span class="">장바구니</span>
                     </h3>
-                    <div class="empty">
+                    <div class="empty">_
                         <p class="top_box_number">
                             <span class="txt" style="display:;" id="cart_display_none">담은상품이<br>없습니다.</span>
                             <strong class="number" id="cart_display_exist" style="display:none"><span id="basket-counter" class="number_txt">0</span><span class="unit">개</span></strong>
@@ -108,4 +108,9 @@
             </div>
         </div>
     </div>
+{{/block}}
+
+{{#block "footer"}}
+<script src="/js/main.js"></script>
+<script src="/js/products.js"></script>
 {{/block}}
