--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -3,6 +3,8 @@
 {{#block "header"}}
 <link rel="stylesheet" type="text/css" href="https://cdn.bmf.kr/web/css/swiper/3.2.7/swiper.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.bmf.kr/static/css/app.v-bdf170c3.css">
+<script src="/js/main.js"></script>
+<script src="/js/cart.js"></script>
 {{/block}}
 
 {{#block "contents"}}
@@ -63,7 +65,7 @@
                             <dl class="prds_lst_info">
                                 <dt class="prd_tlt">
                                     <a href="/product/{{id}}" ga_id="17435" ga_name="{{description}}">
-                                        <span>{{description}}</span>
+                                        <span>{{title}}</span>
                                     </a>
                                 </dt>
                                 <dd class="prd_thumb_price">
@@ -78,7 +80,8 @@
                                             <a href="#" title="수량 빼기" class="down">수량 빼기</a>
                                         </span>
                                     </div>
-                                    <button class="btn btn_gray prd_thumb_btn cart" data-role="add-to-cart-button" data-hash="H62C9" data-price="4640">
+                                    <button class="btn btn_gray prd_thumb_btn cart" data-role="add-to-cart-button"
+                                            data-id="{{id}}" data-hash="H62C9" data-price="4640">
                                       <span>담기</span>
                                     </button>
                                 </dd>
