백엔드거의완료

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -72,13 +72,13 @@
                                 </dd>
                                 <dd class="prd_to_basket">
                                     <div class="prd_account clearfix">
-                                        <label><input class="buy_cnt" type="text" name="amount" value="1" data-name="{{title}}" data-no="17435" data-price="" data-hash="H62C9" data-min="1" data-max="-1"></label>
+                                        <label><input id="amount-{{id}}" class="buy_cnt" type="text" name="amount" value="1" data-name="{{title}}" data-no="17435" data-price="" data-hash="H62C9" data-min="1" data-max="-1"></label>
                                         <span>
                                             <a href="#" title="수량 더하기" class="up">수량 더하기</a>
                                             <a href="#" title="수량 빼기" class="down">수량 빼기</a>
                                         </span>
                                     </div>
-                                    <button class="btn btn_gray prd_thumb_btn cart" data-role="add-to-cart-button" data-hash="H62C9" data-price="4640">
+                                    <button class="btn btn_gray prd_thumb_btn cart" data-role="add-to-cart-button" data-hash="H62C9" data-price="4640" data-product-id="{{id}}" onclick="addToCart(this)">
                                       <span>담기</span>
                                     </button>
                                 </dd>
@@ -108,4 +108,51 @@
             </div>
         </div>
     </div>
+    <script>
+        function addToCart(button) {
+            let productId = button.getAttribute('data-product-id');
+            let amount = $('#amount-'+productId).value;
+            console.log(productId);
+            console.log(amount);
+            fetchManager({
+                url : '/carts',
+                method : 'POST',
+                body : JSON.stringify( {'amount' : amount, 'productId' : productId}),
+                headers : {
+                        'Content-Type': 'application/json',
+                        'Accept': 'application/json'
+                },
+                callback : addToCartCallBack
+                });
+        }
+
+        function addToCartCallBack(responseStatus, data){
+            console.log(data);
+        }
+
+        function amountUp(event){
+            event.preventDefault();
+            let targetElem = getAmountTarget(event);
+            let amount = parseInt(targetElem.value);
+            targetElem.value = amount + 1;
+        }
+
+        function amountDown(event){
+            event.preventDefault();
+            let targetElem = getAmountTarget(event);
+            let amount = parseInt(targetElem.value);
+            if(amount < 2) return;
+            targetElem.value = amount - 1;
+        }
+
+        function getAmountTarget(event){
+            return event.target.parentElement.parentElement.firstElementChild.firstElementChild;
+        }
+
+        document.addEventListener('DOMContentLoaded', function(event){
+            document.querySelectorAll('.up').forEach((elem) => {elem.addEventListener('click', amountUp);});
+            document.querySelectorAll('.down').forEach((elem) => {elem.addEventListener('click', amountDown);})
+        })
+
+    </script>
 {{/block}}
