배민찬 장바구니 기능 구현 및 수정 1. 현재까지 구현 기능 - 장바구니 담기 기능 구현 - 장바구니 가격 정책 및 배송비 구현 - 장바구니 수량 변경시 가격 반영 구현 - 세션을 통해 장바구니 내역 유지 구현
2. 백앤드 수정사항
- DB로 관리하던 Cart, SelectedItem 내용을 Session으로 유지하도록 수정.
- 리팩터링 및 단위테스트 작성

3. 프론트엔드 수정사항
- product, selectedItem, buyersGuide 클래스를 만들어서
클래스가 기능을 담당하도록 수정.

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -52,7 +52,7 @@
                         </thead>
                         <tbody>
                             {{#selectedItems}}
-                            <tr class="cart_prd_list" cart_no="12585780" data-hash="I9D6D" data-subscription-flag="0" data-delivery-limit-periods-flag="1"
+                            <tr id ="selectedItem-{{id}}" class="cart_prd_list" cart_no="12585780" data-hash="I9D6D" data-subscription-flag="0" data-delivery-limit-periods-flag="1"
                                 data-delivery-limit="2018-07-19~2018-08-15">
                                 <td>
                                     <label class="custom_checkbox on">
@@ -170,4 +170,10 @@
         </div>
         {{/cart}}
     </div>
+{{/block}}
+
+{{#block "footer"}}
+<script src="/js/class/selectedItem.js"></script>
+<script src="/js/class/buyersGuide.js"></script>
+<script src="/js/main.js"></script>
 {{/block}}
