fix: 장바구니 기능 클래스화
- Cart 클래스 추가: 장바구니 조회, 추가에 대한 역할
- ProductCounter 클래스 추가: 물품 수량 변경 및 값 검증에 대한 역할
- products.html 페이지 템플릿 footer부분에 관련 js 의존성 추가

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -67,7 +67,7 @@
                                     </a>
                                 </dt>
                                 <dd class="prd_thumb_price">
-                                    <p class="selling-price">4,640<span class="won">원</span></p>
+                                    <p class="selling-price">{{price}}<span class="won">원</span></p>
                                     <p class="origin-price"><del>{{price}}원</del></p>
                                 </dd>
                                 <dd class="prd_to_basket">
@@ -108,5 +108,11 @@
             </div>
         </div>
     </div>
-    <script src="/js/cart.js"></script>
+{{/block}}
+
+{{#block "footer"}}
+<script src="/js/main.js"></script>
+<script src="/js/Cart.js"></script>
+<script src="/js/ProductCounter.js"></script>
+<script src="/js/products.js"></script>
 {{/block}}
