add: 상품 상세 페이지 추가
- ProductCounter를 통해 물품 수량 변경시 총 금액 변경

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -164,3 +164,10 @@
             </div>
         </div>
 {{/block}}
+
+{{#block "footer"}}
+<script src="/js/main.js"></script>
+<script src="/js/Cart.js"></script>
+<script src="/js/ProductCounter.js"></script>
+<script src="/js/product.js"></script>
+{{/block}}
