--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -4,7 +4,17 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.bmf.kr/web/css/swiper/3.2.7/swiper.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.bmf.kr/static/css/app.v-bdf170c3.css">
 {{/block}}
+<style>
+    .hidden {
+        opacity: 0;
+        transition: opacity ease-in-out 0.5s;
+    }
+   .visible {
+       opacity: 1;
+       transition: opacity ease-in-out 0.5s;
 
+   }
+</style>
 {{#block "contents"}}
         <!--  skip navi -->
         <a href="#container" id="skip_navigation">본문 바로가기</a>
@@ -107,7 +117,7 @@
                                                 <strong id="detail_total_price" class="price_number">5,400</strong>
                                                 <span class="unit">원</span>
                                             </p>
-                                            <button type="button" class="btn btn_mint btn_into_basket purchageable">담기</button>
+                                            <button type="button" id="addToCartBtn" class="btn btn_mint btn_into_basket purchageable">담기</button>
                                         </fieldset>
                                     </form>
                                 </div>
@@ -132,9 +142,9 @@
                                 <span>&gt;</span>
                             </a>
                         </div>
-                        <div id="basket-toaster" class="tooltip" style="display: none;">
+                        <div id="basket-toaster" class="tooltip hidden">
                             <i class="tooltip_arr"></i>
-                            <span class="prd_name">상품</span>
+                            <span class="prd_name">{{product.title}}</span>
                             담기완료
                         </div>
                     </div>
@@ -163,6 +173,22 @@
                 </div>
             </div>
         </div>
+{{session}}
+<script src="/js/product.js" defer></script>
+<script>
+    const _product = {
+        id : {{product.id}},
+        price : {{product.price}},
+        title : '{{product.title}}',
+    }
+    const _cart = {
 
-<script src="/js/product.js" async defer> </script>
+    }
+    document.addEventListener('DOMContentLoaded', () =>{
+        const product = new Product(_product.id, _product.price);
+        product.registerEvent();
+
+    });
+</script>
+
 {{/block}}
