* add : products.js

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -109,3 +109,8 @@
         </div>
     </div>
 {{/block}}
+
+{{#block "footer"}}
+<script src="/js/main.js"></script>
+<script src="/js/products.js"></script>
+{{/block}}
