feat: Implements toaster with opacity effect
- Modularize(separate) ShoppingCartSideBar as cart.js to use in product.html view

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -3,8 +3,10 @@
 {{#block "header"}}
 <link rel="stylesheet" type="text/css" href="https://cdn.bmf.kr/web/css/swiper/3.2.7/swiper.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.bmf.kr/static/css/app.v-bdf170c3.css">
+<link rel="stylesheet" href="/common.css">
 <script src="/js/main.js"></script>
 <script src="/js/cart.js"></script>
+<script src="/js/products.js"></script>
 {{/block}}
 
 {{#block "contents"}}
@@ -102,7 +104,7 @@
                         </p>
                         <a href="/cart" id="go_to_cart" class="go_to_basket">장바구니 이동 <span>&gt;</span></a>
                     </div>
-                    <div id="basket-toaster" class="tooltip" style="display: none;">
+                    <div id="basket-toaster" class="tooltip">
                         <i class="tooltip_arr"></i>
                         <span class="prd_name">상품</span>
                         담기완료
