--- a/src/main/resources/static/common.css
+++ b/src/main/resources/static/common.css
@@ -1596,11 +1596,11 @@ div.btn_area {
 }
 
 #basket-toaster {
-    display: none;
     opacity: 0;
-    transition: opacity 0.5s ease-in 0.5s;
+    transition: opacity 0.5s;
 }
 
 #basket-toaster.show {
-    display: block;
+    opacity: 1;
+    transition: opacity 0.5s;
 }
