* mod : 상품 담기 애니메이션 추가

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -1512,3 +1512,12 @@ a:focus {
   width: 250px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
+
+#basket-toaster {
+    opacity: 0;
+    transition: 0.5s;
+}
+
+#basket-toaster.active {
+    opacity: 1;
+}
