--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -98,7 +98,7 @@
 
 {{#block "footer"}}
 <script src="/js/main.js"></script>
-<script src="/js/Cart.js"></script>
-<script src="/js/ProductCounter.js"></script>
+<script src="/js/class/Cart.js"></script>
+<script src="/js/class/ProductCounter.js"></script>
 <script src="/js/products.js"></script>
 {{/block}}
