Add 제품 상세 페이지 장바구니 담기 프론트 완료
-product.js, cart.js 로 분리, 모듈 사용
-URI 정책 변경 products/categoryId/productId 및 html 링크 변경

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -56,13 +56,13 @@
                             <div class="imgthumb">
 	                              <img src="{{imgUrl}}" alt="">
 
-                                <a href="/product/{{id}}" ga_id="17435" ga_name="{{description}}">
+                                <a href="/products/{{category.id}}/{{id}}" ga_id="17435" ga_name="{{description}}">
                                   <div class="thumb_badge"><span class="num">20</span><span class="unit">%</span></div>
                                 </a>
                             </div>
                             <dl class="prds_lst_info">
                                 <dt class="prd_tlt">
-                                    <a href="/product/{{id}}" ga_id="17435" ga_name="{{description}}">
+                                    <a href="/products/{{category.id}}/{{id}}" ga_id="17435" ga_name="{{description}}">
                                         <span>{{description}}</span>
                                     </a>
                                 </dt>
