--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -5,15 +5,28 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.bmf.kr/static/css/app.v-bdf170c3.css">
 {{/block}}
 <style>
-    .hidden {
-        opacity: 0;
-        transition: opacity ease-in-out 0.5s;
+    .hidden{
+        display:none;
     }
+
    .visible {
        opacity: 1;
        transition: opacity ease-in-out 0.5s;
 
    }
+    @keyframes animation{
+
+        0% { opacity: 0; }
+
+        100% {opacity: 1;}
+    }
+
+    .someClass {
+        animation-name: animation;
+        animation-duration: 0.1s;
+        animation-iteration-count: 1;
+        animation-timing-function: ease-in;
+    }
 </style>
 {{#block "contents"}}
         <!--  skip navi -->
@@ -131,9 +144,9 @@
                         </h3>
                         <div class="empty">
                             <p class="top_box_number">
-                                <span class="txt" style="display:;" id="cart_display_none">담은상품이
+                                <span class="txt" id="cart_display_none">담은상품이
                                     <br>없습니다.</span>
-                                <strong class="number" id="cart_display_exist" style="display:none">
+                                <strong class="number" id="cart_display_exist">
                                     <span id="basket-counter" class="number_txt">0</span>
                                     <span class="unit">개</span>
                                 </strong>
@@ -142,7 +155,9 @@
                                 <span>&gt;</span>
                             </a>
                         </div>
-                        <div id="basket-toaster" class="tooltip hidden">
+
+
+                        <div id="basket-toaster" class="tooltip">
                             <i class="tooltip_arr"></i>
                             <span class="prd_name">{{product.title}}</span>
                             담기완료
@@ -173,19 +188,26 @@
                 </div>
             </div>
         </div>
-{{session}}
-<script src="/js/product.js" defer></script>
-<script>
-    const _product = {
-        id : {{product.id}},
+{{cartSession}}
+<script type="module">
+    import Product from "/js/product.js"
+    import {CartTooltip} from "/js/cart.js"
+
+
+    document.addEventListener('DOMContentLoaded', () =>{
+        const _product = {
+            id : {{product.id}},
         price : {{product.price}},
         title : '{{product.title}}',
-    }
-    const _cart = {
-
-    }
-    document.addEventListener('DOMContentLoaded', () =>{
+         }
+        const _cart = {
+            cartProductCnt: {{#if  cartSession}} {{cartSession.cartProductCnt}} {{else}} 0 {{/if}}
+        }
         const product = new Product(_product.id, _product.price);
+            //todo refactor -- product 안에 넣어?
+                const cartTooltip = new CartTooltip(_cart);
+        cartTooltip.renderCartTooltip(_cart);
+        product.initCart(cartTooltip);
         product.registerEvent();
 
     });
