Update 상세페이지 카트 추가 백엔드 버그픽스 및 프론트 완료
- 카트 추가시생기는 백엔드 버그 픽스 (productCnt 새로 할당되지 않는 문제)
- 프론트 > 카트 추가시 토스터 트랜지션
- 프론트 > 초기 화면 장바구니 툴팁 렌더링

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -1512,3 +1512,16 @@ a:focus {
   width: 250px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
+
+.hidden{
+  display:none !important;
+}
+#basket-toaster.transparent{
+  opacity:0;
+  transition: opacity ease-in-out 0.5s;
+}
+#basket-toaster.visible {
+  opacity: 1 !important;
+  transition: opacity ease-in-out 0.5s;
+
+}
