add: 장바구니 페이지 추가
- 장바구니에 담긴 상품목록을 볼 수 있도록 CartDTO 추가
- 최초 진입시 서버사이드 렌더링

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -50,9 +50,8 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {{#products}}
-                            <tr class="cart_prd_list" cart_no="12585780" data-hash="I9D6D" data-subscription-flag="0" data-delivery-limit-periods-flag="1"
-                                data-delivery-limit="2018-07-19~2018-08-15">
+                            {{#each products}}
+                            <tr id="cart_prd_{{@key.id}}" class="cart_prd_list">
                                 <td>
                                     <label class="custom_checkbox on">
                                         <i class="chk_box"></i>
@@ -60,31 +59,31 @@
                                     </label>
                                 </td>
                                 <td class="thumb">
-                                    <a href="/shop/detail.php?hash=I9D6D&amp;cno=30011800">
-                                        <img src="https://cdn.bmf.kr/_data/product/I9D6D/88bd9878ff327da7adc71a9f81e3488b.jpg">
+                                    <a href="/product/{{@key.id}}">
+                                        <img src="{{@key.imgUrl}}">
                                     </a>
                                 </td>
                                 <td class="left">
                                     <p class="title prd_name">
-                                        <a href="/shop/detail.php?hash=I9D6D&amp;cno=30011800">{{title}}</a>
+                                        <a href="/product/{{@key.id}}">{{@key.title}}</a>
                                     </p>
                                     <p class="soldout bf_red" style="display: none;">
                                         <strong class="soldout-text"></strong>
                                     </p>
 
                                     <p class="cartItemMessage bf_red" style="display: none;"></p>
-                                    <!--<p class="receipt_limit bf_red" style="">-->
-                                        <!--배송 가능일이 한정되어 있는 상품입니다.-->
-                                        <!--<strong class="limit-date">-->
-                                            <!--<br>2018-07-19~2018-08-15</strong>-->
-                                    <!--</p>-->
+                                    <p class="receipt_limit bf_red" style="display: none;">
+                                        배송 가능일이 한정되어 있는 상품입니다.
+                                        <strong class="limit-date">
+                                            <br>2018-07-19~2018-08-15</strong>
+                                    </p>
                                 </td>
                                 <td>
-                                    <span cartdata="" id="productPrice">{{price}}</span>원</td>
+                                    <span cartdata="" id="productPrice">{{@key.price}}</span>원</td>
                                 <td>
                                     <div class="prd_account">
                                         <label>
-                                            <input type="number" class="buy_cnt" min="1" max="999" value="" data-quantity=""
+                                            <input type="text" class="buy_cnt" min="1" max="999" value="{{this}}" data-quantity=""
                                                 formnovalidate="">
                                         </label>
                                         <span>
@@ -95,7 +94,7 @@
                                     <button type="button" class="btn btn_white quantity_change_confirm">변경</button>
                                 </td>
                                 <td>
-                                    <span cartdata="origin/sum_final_sell_prc" id="sumSalePrice">미완성</span>원</td>
+                                    <span cartdata="origin/sum_final_sell_prc" id="sumSalePrice"></span>원</td>
                                 <td>
                                     <span class="once_only bf_red">정기배송 불가</span>
                                 </td>
@@ -103,7 +102,7 @@
                                     <a class="ico-delete delete_cart_item" style="cursor:pointer">삭제</a>
                                 </td>
                             </tr>
-                            {{/products}}
+                            {{/each}}
                         </tbody>
                     </table>
 
@@ -168,4 +167,11 @@
             </div>
         </div>
     </div>
+{{/block}}
+
+{{#block "footer"}}
+<script src="/js/main.js"></script>
+<script src="/js/class/Cart.js"></script>
+<script src="/js/class/ProductCounter.js"></script>
+<script src="/js/cart.js"></script>
 {{/block}}
