Add 반찬 목록 장바구니 담기
- 담기 버튼 누를때 이벤트 핸들링
- 수량 증감시 이벤트 핸들링

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -94,7 +94,7 @@
                     <a href="/products">밑반찬</a>
                     <ul class="sub-menu">
                         <li>
-                            <a href="/products/1">무침</a>
+                            <a href="/products/category/1">무침</a>
                         </li>
                         <li>
                             <a href="#">나물무침</a>
