--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -52,7 +52,7 @@
 </ul>                    <h2 class="tlt_cate_h2">밑반찬</h2>
                     <ul id="products" class="prds_lst col4">
                         {{#products}}
-                        <li>
+                        <li data-id="{{id}}">
                             <div class="imgthumb">
 	                              <img src="{{imgUrl}}" alt="">
 
