--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -57,17 +57,17 @@
 	                              <img src="{{imgUrl}}" alt="">
 
                                 <a href="/product/{{id}}" ga_id="17435" ga_name="{{description}}">
-                                  <div class="thumb_badge"><span class="num">20</span><span class="unit">%</span></div>
+                                  <div class="thumb_badge"><span class="num">{{discountRate}}</span><span class="unit">%</span></div>
                                 </a>
                             </div>
                             <dl class="prds_lst_info">
                                 <dt class="prd_tlt">
                                     <a href="/product/{{id}}" ga_id="17435" ga_name="{{description}}">
-                                        <span>{{description}}</span>
+                                        <span>{{title}}</span>
                                     </a>
                                 </dt>
                                 <dd class="prd_thumb_price">
-                                    <p class="selling-price">{{price}}<span class="won">원</span></p>
+                                    <p class="selling-price">{{salesPrice}}<span class="won">원</span></p>
                                     <p class="origin-price"><del>{{price}}원</del></p>
                                 </dd>
                                 <dd class="prd_to_basket">
