Add 장바구니 화면 변경 요청 프론트
- 프론트 갯수 변경 리스너 부착
- 프론트, handlebar로 장바구니 리스트 출력
- 백엔드 구현중...

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -51,8 +51,7 @@
                         </thead>
                         <tbody>
                         {{#cartItems}}
-                            <h2>{{product}}</h2>
-                            <tr class="cart_prd_list" cart_no="{{id}}" data-hash="I9D6D" data-subscription-flag="0" data-delivery-limit-periods-flag="1"
+                            <tr class="cart_prd_list" cart_no="{{id}}" product_no="{{product.id}}" data-hash="I9D6D" data-subscription-flag="0" data-delivery-limit-periods-flag="1"
                                 data-delivery-limit="2018-07-19~2018-08-15">
                                 <td>
                                     <label class="custom_checkbox on">
@@ -98,7 +97,10 @@
                                 <td>
                                     <span cartdata="origin/sum_final_sell_prc" id="sumSalePrice">{{totalPrice}}</span>원</td>
                                 <td>
-                                    <span class="once_only bf_red">정기배송 불가</span>
+                                    {{#if product.deliverable}}
+                                    <span>정기배송 가능</span>
+                                    {{else}}  <span class="once_only bf_red">정기배송 불가</span>
+                                    {{/if}}
                                 </td>
                                 <td>
                                     <a class="ico-delete delete_cart_item" style="cursor:pointer">삭제</a>
@@ -137,23 +139,25 @@
                     </div>
 
                     <div class="purchase_price">
+
+                        {{#cart.calculation}}
                         <h3>구매 가격</h3>
                         <div class="box">
                             <dl class="price">
                                 <dt>상품 금액</dt>
                                 <dd>
-                                    <span pricedata="" id="salePrice">{{formattedTotalPrice}}</span>원</dd>
+                                    <span pricedata="" id="salePrice">{{totalPrice}}</span>원</dd>
                                 <dt>배송비</dt>
                                 <dd>
-                                    <span pricedata="" id="shippingFee">2,500</span>원
-                                    <p class="msg">40,000원 이상 구매 시 배송비 무료</p>
+                                    <span pricedata="" id="shippingFee">{{deliveryFee}}</span>원
+                                    <p class="msg">{{deliveryFeeThreashold}}원 이상 구매 시 배송비 무료</p>
                                 </dd>
                             </dl>
 
                             <dl class="total">
                                 <dt>총 주문금액</dt>
                                 <dd>
-                                    <span class="number" pricedata="" id="totalPrice">{{formattedDeliveryTotalPrice}}</span>
+                                    <span class="number" pricedata="" id="totalPrice">{{deliveryTotalPrice}}</span>
                                     <span class="won">원</span>
                                     <p class="msg save-point">포인트
                                         <span id="mileage" pricedata="total_milage">208</span>p</p>
@@ -161,6 +165,8 @@
                             </dl>
 
                         </div>
+                        {{/cart.calculation}}
+
                     </div>
                 </div>
                 <div class="btn-area cart">
@@ -170,5 +176,15 @@
         </div>
     </div>
 
-{{cartSession}}
+<script type="module">
+import Cart from "/js/cart.js";
+
+document.addEventListener('DOMContentLoaded', () =>{
+        const cart = new Cart();
+        cart.initCartTooltip();
+        cart.registerEvent();
+    });
+
+
+</script>
 {{/block}}
