배민찬, 장바구니 기능 백엔드 추가 구현
- 로그인한 사용자를 대상으로  장바구니를 DB로 관리한다.
- 로그인한 사용자를 대상으로 장바구니 상품의 이력을 DB로 관리한다.

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -67,7 +67,7 @@
                                     </a>
                                 </dt>
                                 <dd class="prd_thumb_price">
-                                    <p class="selling-price">4,640<span class="won">원</span></p>
+                                    <p class="selling-price">{{sellingPrice}}<span class="won">원</span></p>
                                     <p class="origin-price"><del>{{price}}원</del></p>
                                 </dd>
                                 <dd class="prd_to_basket">
@@ -79,7 +79,7 @@
                                             <a href="#" title="수량 빼기" class="down">수량 빼기</a>
                                         </span>
                                     </div>
-                                    <button class="btn btn_gray prd_thumb_btn cart"data-role="add-to-cart-button" data-hash="H62C9" data-price="4640">
+                                    <button class="btn btn_gray prd_thumb_btn cart" data-role="add-to-cart-button" data-hash="H62C9" data-price="4640">
                                       <span>담기</span>
                                     </button>
                                 </dd>
@@ -109,5 +109,6 @@
             </div>
         </div>
     </div>
+
 <script type="module" src="/js/product.js"></script>
 {{/block}}
