mod: Cart.js의 view 로직을 분리
- 장바구니 API 변경사항 적용
- StickyCartView.js 추가
- 관련 페이지 수정

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -99,6 +99,7 @@
 {{#block "footer"}}
 <script src="/js/main.js"></script>
 <script src="/js/class/Cart.js"></script>
+<script src="/js/class/StickyCartView.js"></script>
 <script src="/js/class/ProductCounter.js"></script>
 <script src="/js/products.js"></script>
 {{/block}}
