--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -148,6 +148,7 @@
 {{#block "footer"}}
 <script src="/js/main.js"></script>
 <script src="/js/class/Cart.js"></script>
+<script src="/js/class/StickyCartView.js"></script>
 <script src="/js/class/ProductCounter.js"></script>
 <script src="/js/product.js"></script>
 {{/block}}
